2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Time/NTP.pm: module for handling NTP servers configuration
	* NTPConfig.pm: toplevel object for dealing with NTP config

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* test-backends: improved a bit, removed unused code

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Groups.pm: module for managing group settings
	* GroupsConfig.pm: toplevel object for dealing with groups

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ShellsConfig.pm: ShellsList object renamed, all exported objects
	will be called *Config

2005-08-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Shells.pm: small indenting fix
	* Users/Users.pm: modify to get data from login.defs and some pam 
	info (whether to use MD5 to crypt passwords)
	* UsersConfig.pm: new toplevel object, contains the users list,	and
	logindefs info relevant to users. Deprecates UserList
	* UsersList.pm: deleted

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time-conf.in: applied patch to update /etc/timezone in debian based
	systems. Fixes #167035

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: added support for WEP key type (ASCII or hexa)

2005-05-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* UsersList.pm: added
	* Loader.pl.in: use UsersList
	* Users/Users.pm: made passwd/shadow parameters a bit more generic,
	but still needs some love. Removed unused bits from the get()
	function, implemented get_files()

2005-05-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* SharesList.pm: adapted signal emitting to new Dbus bindings API
	* Users/Shells.pm: separated shells handling from Users/Users.pm,
	implemented set()
	* ShellsList.pm: use new .pm for shells, monitor /etc/shells
	* Utils/Monitor.pm: accept both arrays and single file names

2005-05-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Users.pm: moved from users-conf.in, removed some code that