@@ -27,10 +27,10 @@ use Net::DBus::Reactor;
 use Utils::Backend;
 use Utils::Monitor;
 
-use SharesList;
-use ServicesList;
-use ShellsList;
-use UsersList;
+use ShellsConfig;
+use UsersConfig;
+use GroupsConfig;
+use NTPConfig;
 
 # Initialize tool
 &Utils::Backend::init ($name, $version, $description, $directives, @ARGV);
@@ -41,10 +41,10 @@ my $service = Net::DBus::Service->new($Utils::Backend::DBUS_PREFIX, $bus);
 my $reactor = Net::DBus::Reactor->new();
 
 #Initialize all objects
-my $shares_list   = SharesList->new   ($service);
-my $services_list = ServicesList->new ($service);
-my $shells_list   = ShellsList->new   ($service);
-my $users_list    = UsersList->new    ($service);
+my $shells_config  = ShellsConfig->new   ($service);
+my $users_config   = UsersConfig->new    ($service);
+my $groups_config  = GroupsConfig->new   ($service);
+my $ntp_config     = NTPConfig->new      ($service);
 
 $reactor->manage($bus->{connection});
 $reactor->add_timeout (50, Net::DBus::Callback->new(method => \&Utils::Monitor::do_monitor_files));
